language/move-lang/tests/move_check/translated_ir_tests/move/borrow_tests/borrow_global_bad1.exp
error[E07002]: mutable ownership violated
  ┌─ tests/move_check/translated_ir_tests/move/borrow_tests/borrow_global_bad1.move:8:17
  │
7 │         let x = borrow_global_mut<T>(sender);
  │                 ---------------------------- It is still being mutably borrowed by this reference
8 │         let y = borrow_global_mut<T>(addr);
  │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid borrowing of resource 'T'

